--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="register_email_hint">Email</string>
     <string name="register_password_hint">Password</string>
     <string name="register_button_register">Register</string>
+    <string name="login_go_to_register">Create account</string>
 </resources>
