Search game screen designed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="login_password_error_length">Password must has at least 6 characters</string>
     <string name="register_error_on_register">Error on register</string>
     <string name="search_game_loading">Loading...</string>
+    <string name="search_game_button_play">Play online</string>
+    <string name="search_game_button_ranking">Show ranking</string>
 </resources>
